# GNR_project

./: .gitignore  README.md  convergence.py  convergence_plotting.py  generate_ribbons.py  mypy.ini  pyproject.toml  relax.py  saturated_ribbon.txt  setup.py
Convergence/: convergence.py  convergence_plotting.py
GNR_project.egg-info/: PKG-INFO  SOURCES.txt
LDOS/: tasks.py
backbone_structure/: plotting.py  tasks.py  workflow.py
calculations/Convergence/: convergence_plotting.py
calculations/LDOS/: tasks.py  workflow.py
calculations/LDOS_OH/: tasks.py  workflow.py
calculations/LDOS_length_test/: tasks.py
calculations/LDOS_plot_recreation/: plotting.py  tasks.py  workflow.py
calculations/backbone_structure/: plotting.py  tasks.py  workflow.py
calculations/backbone_structure/bandstructure/: calc_bandstructure.py  output.txt
functions/: bandstructure.py  generate_ribbons.py  relax.py
relaxation/: tasks.py  workflow.py
src/functions/: bandstructure.py  generate_ribbons.py  relax.py
