[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "GNR project"
version = "0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
mypy = "^0.910"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.0"
matplotlib = "^3.7.0"
gpaw = "^24.10.0"
ase = "^3.22.0"


[tool.setuptools.packages]
find = {}