[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "GNR project"
version = "0.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
mypy = "^1.15.0"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.0"
matplotlib = "^3.7.0"
gpaw = "^24.10.0"
ase = "^3.22.0"


[tool.setuptools.packages]
find = {}